immich/microservices-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-microservices
  namespace: immich
  labels:
    app.kubernetes.io/name: microservices
    app.kubernetes.io/instance: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: microservices
      app.kubernetes.io/instance: immich
  template:
    metadata:
      labels:
        app.kubernetes.io/name: microservices
        app.kubernetes.io/instance: immich
    spec:
      containers:
        - name: microservices
          image: altran1502/immich-server
          command:
            - /bin/sh
            - ./start-microservices.sh
          ports:
            - containerPort: 3002
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/src/app/upload
              name: upload
      serviceAccountName: immich-microservices
      volumes:
        - name: upload
          persistentVolumeClaim:
            claimName: immich-upload
