immich/ml-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  namespace: immich
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: machine-learning
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: machine-learning
      app.kubernetes.io/instance: immich
  template:
    metadata:
      labels:
        app.kubernetes.io/name: machine-learning
        app.kubernetes.io/instance: immich
    spec:
      containers:
        - name: machine-learning
          image: altran1502/immich-machine-learning
          command:
            - /bin/sh
            - ./entrypoint.sh
          ports:
            - containerPort: 3003
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/src/app/upload
              name: upload
      serviceAccountName: immich-machine-learning
      volumes:
        - name: upload
          persistentVolumeClaim:
            claimName: immich-upload
