immich/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: immich
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: immich
      app.kubernetes.io/name: server
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: immich
        app.kubernetes.io/name: server
    spec:
      containers:
        - name: server
          image: altran1502/immich-server
          command:
            - /bin/sh
            - ./start-server.sh
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /server-info/ping
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /server-info/ping
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - name: http
              containerPort: 3001
          volumeMounts:
            - mountPath: /usr/src/app/upload
              name: upload
      serviceAccountName: immich-server
      volumes:
        - name: upload
          persistentVolumeClaim:
            claimName: immich-upload
