immich/typesense-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: typesense
  namespace: immich
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: typesense
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: immich
      app.kubernetes.io/name: typesense
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: immich
        app.kubernetes.io/name: typesense
    spec:
      serviceAccountName: typesense
      containers:
        - name: typesense
          image: typesense/typesense
          ports:
            - name: http
              containerPort: 8108
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: typesense
