immich/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-web
  namespace: immich
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: immich
      app.kubernetes.io/name: web
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: immich
        app.kubernetes.io/name: web
    spec:
      containers:
        - name: web
          image: altran1502/immich-web
          command:
            - /bin/sh
            - ./entrypoint.sh
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: http
              scheme: HTTP
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          ports:
            - name: http
              containerPort: 3000
      serviceAccountName: immich-web
