immich/microservices-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-microservices
  namespace: immich
  labels:
    app.kubernetes.io/name: microservices
    app.kubernetes.io/instance: immich
spec:
  ports:
    - name: http
      port: 3002
      targetPort: http
  selector:
    app.kubernetes.io/name: microservices
    app.kubernetes.io/instance: immich
