immich/ml-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: machine-learning
spec:
  ports:
    - name: http
      port: 3003
      targetPort: http
  selector:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: machine-learning
