immich/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  namespace: immich
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: server
spec:
  ports:
  - name: http
    port: 3001
    targetPort: http
  selector:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: server
