immich/typesense-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: typesense
  namespace: immich
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: typesense
spec:
  ports:
    - name: http
      port: 8108
      targetPort: http
  selector:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: typesense
