immich/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-web
  namespace: immich
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: web
spec:
  ports:
  - name: http
    port: 3000
    targetPort: http
  selector:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: web
