immich/server-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefix
  namespace: immich
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-server
  namespace: immich
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: immich-strip-api-prefix@kubernetescrd
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: server
spec:
  rules:
    - host: photos.seymour.family
      http:
        paths:
          - backend:
              service:
                name: immich-server
                port:
                  number: 3001
            path: /api
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - photos.seymour.family
      secretName: immich-tls
