immich/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-web
  namespace: immich
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: web
spec:
  rules:
  - host: photos.seymour.family
    http:
      paths:
      - backend:
          service:
            name: immich-web
            port:
              number: 3000
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - photos.seymour.family
    secretName: immich-tls
